data/Java/09-use-undeclared-variable/4/[M]Error.txt
https://stackoverflow.com/questions/8630026/java-cannot-find-symbol
Deck.java:3: error: cannot find symbol
        deck = new Card();
        ^